test/Quake/adjoint-2.qke
// ========================================================================== //
// Copyright (c) 2022 - 2023 NVIDIA Corporation & Affiliates.                 //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt --apply-op-specialization -verify-diagnostics %s

module attributes {quake.mangled_name_map = {__nvqpp__mlirgen__kernel_alpha = "_ZN12kernel_alphaclERN4cudaq5quditILm2EEE", __nvqpp__mlirgen__kernel_beta = "_ZN11kernel_betaclEv"}} {
  // expected-error @+1 {{cannot make adjoint of kernel with a measurement}}
  func.func @__nvqpp__mlirgen__kernel_alpha(%arg0: !quake.ref) attributes {"cudaq-kernel"} {
    %0 = quake.mx %arg0 : (!quake.ref) -> i1
    return
  }
  func.func @__nvqpp__mlirgen__kernel_beta() attributes {"cudaq-entrypoint", "cudaq-kernel"} {
    %0 = quake.alloca !quake.ref
    %1 = cc.undef !llvm.struct<"kernel_alpha", ()>
    quake.apply<adj> @__nvqpp__mlirgen__kernel_alpha %0 : (!quake.ref) -> ()
    return
  }
}

